fixed advert on mobile

--- a/css/mobileResponsive.css
+++ b/css/mobileResponsive.css
@@ -21,6 +21,16 @@
         display: none;
     }
 
+    #digiClenseWrapperMobile
+    {
+        display: block;
+    }
+
+    #iStoneMobile
+    {
+        display: block;
+    }
+
     .gradientBackground 
     {
         height: 100%;
@@ -199,6 +209,16 @@
         overflow-x: hidden;
         padding: 0;
         margin: 0;
+    }
+
+    #digiClenseWrapperMobile
+    {
+        display: block;
+    }
+
+    #iStoneMobile
+    {
+        display: block;
     }
 
     #iStoneMobile
@@ -385,6 +405,16 @@
         margin: 0;
     }
 
+    #digiClenseWrapperMobile
+    {
+        display: block;
+    }
+
+    #iStoneMobile
+    {
+        display: block;
+    }
+
     #iStoneMobile
     {
        width: 90vw;
@@ -467,6 +497,16 @@
        right: 5vw;
     }
 
+    #digiClenseWrapperMobile
+    {
+        display: block;
+    }
+
+    #iStoneMobile
+    {
+        display: block;
+    }
+
     #digiClenseWrapper
     {
         display: none;
@@ -533,6 +573,16 @@
         overflow-x: hidden;
         padding: 0;
         margin: 0;
+    }
+
+    #digiClenseWrapperMobile
+    {
+        display: block;
+    }
+
+    #iStoneMobile
+    {
+        display: block;
     }
 
     #iStoneMobile
@@ -726,6 +776,16 @@
        right: 5vw;
     }
 
+    #digiClenseWrapperMobile
+    {
+        display: block;
+    }
+
+    #iStoneMobile
+    {
+        display: block;
+    }
+
     #digiClenseWrapper
     {
         display: none;
@@ -901,6 +961,16 @@
         overflow-y: visible;
         padding: 0;
         margin: 0;
+    }
+
+    #digiClenseWrapperMobile
+    {
+        display: block;
+    }
+
+    #iStoneMobile
+    {
+        display: block;
     }
 
     #iStoneMobile
@@ -1091,6 +1161,16 @@
         display: none;
     }
 
+    #digiClenseWrapperMobile
+    {
+        display: block;
+    }
+
+    #iStoneMobile
+    {
+        display: block;
+    }
+
     .gradientBackground 
     {
         height: 100%;
@@ -1265,6 +1345,16 @@
     #digiClenseWrapper
     {
         display: none;
+    }
+
+    #digiClenseWrapperMobile
+    {
+        display: block;
+    }
+
+    #iStoneMobile
+    {
+        display: block;
     }
 
     .gradientBackground 
